# code-generator-time-series

./: .gitignore  CMakeLists.txt  README.md
resources/transducers/: plateau.json  zigzag.json
src/: main.cpp
src/decoration/: Decoration.cpp  Decoration.h
src/generator/: Generator.cpp  Generator.h
src/lib/: Semantic.h
src/lib/decoration/: Decoration.cpp  Decoration.h
src/lib/generator/: Generator.cpp  Generator.h
src/lib/transducers/: Transducer.cpp  Transducer.h
src/transducers/: PlateauTransducer.cpp  PlateauTransducer.h  SeedTransducer.cpp  SeedTransducer.h  Transducer.cpp  Transducer.h
